Fields to enter bets added

--- a/css/admin.css
+++ b/css/admin.css
@@ -11,7 +11,7 @@ fieldset
 {
 	font-size: 14pt;
 	margin: 20px 0px 30px 10px;
-	color: black;
+	color: #000000;
 	height: 20px;
 	filter:progid:DXImageTransform.Microsoft.Shadow(color=#000037, direction=20, strength=3);
 }
@@ -19,7 +19,7 @@ fieldset
 
 .warn
 {
-	border: 1px solid #8A0000;
+	border: 1px solid #8a0000;
 	background-color: #FFECDF;
 	color: #000053;
 	font-weight: bold;
